kubernetes/apps/kube-system/cilium/config/block-outside-trafic.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: block-outside-trafic
spec:
  endpointSelector:
    matchExpressions:
      - key: "io.kubernetes.pod.namespace"
        operator: "NotIn"
        values:
        - "kube-system"
  enableDefaultDeny:
    ingress: false
  egress:
    - toPorts:
      - ports:
        - port: "443"
          protocol: "TCP"
        - port: "443"
          protocol: "UDP"
