kubernetes/apps/kube-system/cilium/config/filter-world-trafic.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: filter-world-trafic
spec:
  endpointSelector:
    matchExpressions:
      - key: "io.kubernetes.pod.namespace"
        operator: "NotIn"
        values:
        - "kube-system"
  enableDefaultDeny:
    # egress: false
    ingress: false
  egress:
    - toEntities:
        - world
      toPorts:
      - ports:
        - port: "443"
          protocol: "TCP"
        - port: "443"
          protocol: "UDP"
    - toEntities:
        - kube-apiserver
        - ingress
        - cluster
